2008-10-04	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/{sm-layer.c,xfsm-client.*,xfsm-properties.*}:
	  Add signals to XfsmClient, and move some of the property
	  handling code into XfsmClient to make signal emission
	  easier.
	* xfce4-session/{xfsm-marshal.list,Makefile.am}: Add signal
	  marshallers.

2008-10-04	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/{sm-layer.c,xfsm-client.[ch],xfsm-manager.c}:
	  Turn XfsmClient into a GObject.  Second step for bug 798 and
	  a D-Bus interface.

2008-10-03	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/{main.c,xfsm-manager.{c,h},xfsm-global.{c,h}}:
	  Move some functions that aren't really XfsmManager-related
	  into xfsm-global.

2008-10-03	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/*.[ch]: Turn XfsmManager into a GObject, and
	  remove most of the app-global variables.  This is a first
	  step toward fixing bug 798, as well as making xfce4-session
	  ready for a D-Bus interface.

2008-10-01	Jannis Pohlmann <jannis@xfce.org>

	* settings/session/{Makefile.am,session.c}, 
	  settings/splash/{Makefile.am, splash.c},
	  xfce4-autostart-editor/xfae-window.c: Fix unused and uninitialized
	  variable warnings. Add G_LOG_DOMAIN to the dialog makefiles.

2008-10-01	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/{xfsm-startup.[ch],xfsm-properties.h,xfsm-manager.[ch]}:
	  Start all session clients in parallel within priority groups.
	  There's still probably more work to be done here, but this is
	  a good first cut, and seems to work well (bug 4312).

2008-09-23	Brian Tarricone <bjt23@cornell.edu>

	* po/POTFILES.in: add xfce4-autostart-editor/main.c.

2008-09-15	Jannis Pohlmann <jannis@xfce.org>

	* xfce4-autostart-editor/main.c, 
	  xfce4-autostart-editor/xfae-window.{c,h},
	  xfce4-autostart-editor/xfce4-autostart-editor.desktop.in: Add 
	  embedding support to the autostart editor. I suppose there is a 
	  better way to do it with the existing code, but it works and it's