@@ -1,5 +1,9 @@
 2008-10-04	Brian Tarricone <bjt23@cornell.edu>
 
+	* xfce4-session/xfsm-manager.c: Add signals to XfsmManager.
+
+2008-10-04	Brian Tarricone <bjt23@cornell.edu>
+
 	* xfce4-session/{sm-layer.c,xfsm-client.*,xfsm-properties.*}:
 	  Add signals to XfsmClient, and move some of the property
 	  handling code into XfsmClient to make signal emission
